<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <fragment android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="dominando.android.hotel.HotelListFragment"
        android:id="@+id/fragmentLista"/>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="adicionarHotelClick"
        android:src="@drawable/ic_add_white_24dp"
        app:fabSize="normal"
        app:borderWidth="0dp"
        android:layout_gravity="bottom|end"/>
</android.support.design.widget.CoordinatorLayout>
