<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    android:visibility="gone"
    android:padding="10dp">
    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textColor="#CCC" />
    <TextView
        android:id="@+id/txtMensagem"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="sans-serif"
        android:textSize="14sp"
        android:textColor="#000"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.wearable.view.DelayedConfirmationView
            android:id="@+id/delayed_confirm"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            app:circle_border_color="#00CCFF"
            app:circle_border_width="4dp"
            app:circle_color="#0000FF"
            app:circle_radius="24dp" />
        <TextView
            android:id="@+id/txtCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:fontFamily="sans-serif"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
